--- a/SEP1/src/ks.fxml
+++ b/SEP1/src/ks.fxml
@@ -30,88 +30,55 @@
                      <children>
                         <GridPane layoutX="19.0" layoutY="52.0" prefWidth="950.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="170.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints maxHeight="30.4" minHeight="10.0" prefHeight="30.4" vgrow="SOMETIMES" />
                             <RowConstraints maxHeight="30.4" minHeight="10.0" prefHeight="30.4" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Button fx:id="updateListsButton" mnemonicParsing="false" onAction="#handleExam" text="Update" />
                               <Label text="Duration" GridPane.columnIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="135.0" />
+                                    <Insets left="60.0" />
                                  </GridPane.margin>
                               </Label>
                               <Label text="Course" GridPane.columnIndex="2">
                                  <GridPane.margin>
-                                    <Insets left="50.0" />
+                                    <Insets left="55.0" />
                                  </GridPane.margin>
                               </Label>
                               <Label text="Room" GridPane.columnIndex="3">
                                  <GridPane.margin>
-                                    <Insets left="55.0" />
+                                    <Insets left="60.0" />
                                  </GridPane.margin>
                               </Label>
-                              <ComboBox fx:id="examDate" prefWidth="140.0" GridPane.rowIndex="1">
-                                 <GridPane.margin>
-                                    <Insets right="5.0" />
-                                 </GridPane.margin>
-                              </ComboBox>
                               <ComboBox fx:id="examCourse" prefWidth="140.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="5.0" />
+                                    <Insets left="12.0" />
                                  </GridPane.margin>
                               </ComboBox>
                               <ComboBox fx:id="examRoom" prefWidth="140.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="5.0" />
+                                    <Insets left="10.0" />
                                  </GridPane.margin>
                               </ComboBox>
                               <Label text="Examiner" GridPane.columnIndex="4">
                                  <GridPane.margin>
-                                    <Insets left="50.0" />
+                                    <Insets left="55.0" />
                                  </GridPane.margin>
                               </Label>
-                              <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                 <children>
-                                    <Label prefWidth="50.0" text="From:">
-                                       <padding>
-                                          <Insets top="5.0" />
-                                       </padding>
-                                       <HBox.margin>
-                                          <Insets left="5.0" />
-                                       </HBox.margin>
-                                    </Label>
-                                    <TextField fx:id="examFrom" prefWidth="100.0">
-                                       <HBox.margin>
-                                          <Insets right="10.0" />
-                                       </HBox.margin>
-                                    </TextField>
-                                    <Label prefWidth="35.0" text="To:">
-                                       <padding>
-                                          <Insets top="5.0" />
-                                       </padding>
-                                    </Label>
-                                    <TextField fx:id="examTo" prefWidth="100.0">
-                                       <HBox.margin>
-                                          <Insets right="10.0" />
-                                       </HBox.margin>
-                                    </TextField>
-                                 </children>
-                              </HBox>
                               <ComboBox fx:id="examExaminer" prefWidth="140.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="5.0" />
+                                    <Insets left="10.0" />
                                  </GridPane.margin></ComboBox>
                               <Label text="Co-examiner" GridPane.columnIndex="5">
                                  <GridPane.margin>
-                                    <Insets left="40.0" />
+                                    <Insets left="45.0" />
                                  </GridPane.margin>
                               </Label>
                               <TextField fx:id="examCoExaminer" GridPane.columnIndex="5" GridPane.rowIndex="1">
@@ -119,6 +86,26 @@
                                     <Insets left="5.0" />
                                  </GridPane.margin>
                               </TextField>
+                              <TextField fx:id="examDuration" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                 <children>
+                                    <ComboBox fx:id="examDate" prefWidth="80.0">
+                                       <HBox.margin>
+                                          <Insets right="5.0" top="2.0" />
+                                       </HBox.margin>
+                                    </ComboBox>
+                                    <Button fx:id="updateListsButton" mnemonicParsing="false" onAction="#handleExam" text="Update">
+                                       <HBox.margin>
+                                          <Insets left="5.0" top="2.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                              <Label text="Date">
+                                 <GridPane.margin>
+                                    <Insets left="55.0" />
+                                 </GridPane.margin>
+                              </Label>
                            </children>
                         </GridPane>
                         <Button fx:id="examSave" layoutX="384.0" layoutY="139.0" mnemonicParsing="false" onAction="#handleExam" text="Save" />
