--- a/SEP1/src/ks.fxml
+++ b/SEP1/src/ks.fxml
@@ -108,7 +108,7 @@
                               </Label>
                            </children>
                         </GridPane>
-                        <Button fx:id="examSave" layoutX="384.0" layoutY="139.0" mnemonicParsing="false" onAction="#handleExam" text="Save" />
+                        <Button fx:id="examSave" layoutX="384.0" layoutY="139.0" mnemonicParsing="false" onAction="#handleExam" prefHeight="30.0" prefWidth="50.0" text="Save" />
                         <GridPane layoutX="73.0" layoutY="185.0" prefHeight="30.0" prefWidth="890.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -129,7 +129,7 @@
                            </children>
                         </GridPane>
                         <ListView fx:id="examList" layoutX="49.0" layoutY="221.0" prefHeight="282.0" prefWidth="890.0" />
-                        <Button fx:id="examRemove" layoutX="500.0" layoutY="139.0" mnemonicParsing="false" onAction="#handleExam" text="Remove" />
+                        <Button fx:id="examRemove" layoutX="500.0" layoutY="139.0" mnemonicParsing="false" onAction="#handleExam" prefHeight="30.0" text="Remove" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -137,11 +137,11 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="300.0">
                      <children>
-                        <Button fx:id="courseAdd" layoutX="702.0" layoutY="260.0" mnemonicParsing="false" onAction="#handleCourse" text="Add" />
-                        <Button fx:id="courseRemove" layoutX="763.0" layoutY="260.0" mnemonicParsing="false" onAction="#handleCourse" text="Remove" />
+                        <Button fx:id="courseAdd" layoutX="612.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleCourse" prefHeight="30.0" prefWidth="50.0" text="Add" />
+                        <Button fx:id="courseRemove" layoutX="708.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleCourse" prefHeight="30.0" text="Remove" />
                         <HBox layoutX="80.0" layoutY="339.0" prefHeight="40.0" prefWidth="260.0">
                            <children>
-                              <Label prefHeight="18.0" prefWidth="91.0" text="Course name:">
+                              <Label prefHeight="18.0" prefWidth="83.0" text="Course name:">
                                  <HBox.margin>
                                     <Insets top="5.0" />
                                  </HBox.margin>
@@ -149,7 +149,7 @@
                               <TextField fx:id="courseName" />
                            </children>
                         </HBox>
-                        <HBox layoutX="612.0" layoutY="339.0" prefHeight="34.0" prefWidth="218.0">
+                        <HBox layoutX="591.0" layoutY="339.0" prefHeight="40.0" prefWidth="218.0">
                            <children>
                               <Label prefHeight="18.0" prefWidth="66.0" text="Exam info:">
                                  <HBox.margin>
@@ -159,7 +159,7 @@
                               <ComboBox fx:id="courseExamInfo" prefWidth="150.0" />
                            </children>
                         </HBox>
-                        <Button fx:id="courseUpdate" layoutX="474.0" layoutY="420.0" mnemonicParsing="false" onAction="#handleCourse" text="Update" />
+                        <Button fx:id="courseUpdate" layoutX="427.0" layoutY="402.0" mnemonicParsing="false" onAction="#handleCourse" prefHeight="30.0" prefWidth="60.0" text="Update" />
                         <HBox layoutX="344.0" layoutY="339.0" prefHeight="40.0" prefWidth="226.0">
                            <children>
                               <Label prefHeight="18.0" prefWidth="178.0" text="Number of Students:">
@@ -174,7 +174,7 @@
                               </TextField>
                            </children>
                         </HBox>
-                        <ListView fx:id="courseList" layoutX="218.0" layoutY="40.0" prefHeight="200.0" prefWidth="563.0" />
+                        <ListView fx:id="courseList" layoutX="218.0" layoutY="40.0" prefHeight="200.0" prefWidth="550.0" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -182,14 +182,20 @@
                <content>
                   <AnchorPane prefHeight="413.0" prefWidth="1000.0">
                      <children>
-                        <VBox layoutX="28.0" layoutY="87.0" prefHeight="90.0" prefWidth="231.0">
+                        <VBox layoutX="28.0" layoutY="87.0" prefHeight="70.0" prefWidth="231.0">
                            <children>
                               <RadioButton fx:id="examinerAllExaminers" mnemonicParsing="false" onAction="#handleExaminer" text="All examiners">
                                  <toggleGroup>
                                     <ToggleGroup fx:id="ks" />
                                  </toggleGroup>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" />
+                                 </VBox.margin>
                               </RadioButton>
-                              <RadioButton fx:id="examinerAvailableExaminers" mnemonicParsing="false" onAction="#handleExaminer" text="Available examiners" toggleGroup="$ks" />
+                              <RadioButton fx:id="examinerAvailableExaminers" mnemonicParsing="false" onAction="#handleExaminer" text="Available examiners" toggleGroup="$ks">
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" />
+                                 </VBox.margin></RadioButton>
                               <RadioButton fx:id="examinerUnavailableExaminers" mnemonicParsing="false" onAction="#handleExaminer" text="Unavailable examiners" toggleGroup="$ks">
                                  <cursor>
                                     <Cursor fx:constant="SW_RESIZE" />
@@ -211,7 +217,7 @@
                               </ComboBox>
                            </children>
                         </HBox>
-                        <GridPane alignment="CENTER" layoutX="27.0" layoutY="211.0" prefHeight="133.0" prefWidth="268.0">
+                        <GridPane alignment="CENTER" layoutX="27.0" layoutY="211.0" prefHeight="100.0" prefWidth="270.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="288.0" minWidth="0.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" prefWidth="200.0" />
@@ -220,7 +226,6 @@
                             <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
                             <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="79.0" vgrow="SOMETIMES" />
                             <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-                              <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
                               <Label alignment="BASELINE_LEFT" text="Name:">
@@ -241,11 +246,6 @@
                                     <Insets />
                                  </GridPane.margin>
                               </Label>
-                              <Label text="Availability:" GridPane.rowIndex="3">
-                                 <GridPane.margin>
-                                    <Insets top="5.0" />
-                                 </GridPane.margin>
-                              </Label>
                               <TextField fx:id="examinerName" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="150.0" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets />
@@ -261,18 +261,13 @@
                                     <Insets />
                                  </GridPane.margin>
                               </ComboBox>
-                              <ComboBox fx:id="examinerAvailability" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                                 <GridPane.margin>
-                                    <Insets top="10.0" />
-                                 </GridPane.margin>
-                              </ComboBox>
                            </children>
                         </GridPane>
-                        <Button fx:id="examinerUpdate" layoutX="86.0" layoutY="380.0" mnemonicParsing="false" onAction="#handleExaminer" prefHeight="30.0" prefWidth="58.0" text="Update" />
-                        <Button fx:id="examinerAdd" layoutX="583.0" layoutY="379.0" mnemonicParsing="false" onAction="#handleExaminer" prefHeight="32.0" prefWidth="54.0" text="Add" />
-                        <Button fx:id="examinerRemove" layoutX="721.0" layoutY="379.0" mnemonicParsing="false" onAction="#handleExaminer" prefHeight="32.0" text="Remove" />
-                        <ListView fx:id="examinerList" layoutX="460.0" layoutY="49.0" prefHeight="307.0" prefWidth="458.0" />
-                        <Button fx:id="examinerAddMoreCourse" layoutX="295.0" layoutY="278.0" mnemonicParsing="false" onAction="#handleExaminer" text="Add more course" />
+                        <Button fx:id="examinerUpdate" layoutX="124.0" layoutY="334.0" mnemonicParsing="false" onAction="#handleExaminer" prefHeight="30.0" prefWidth="60.0" text="Update" />
+                        <Button fx:id="examinerAdd" layoutX="572.0" layoutY="349.0" mnemonicParsing="false" onAction="#handleExaminer" prefHeight="30.0" prefWidth="50.0" text="Add" />
+                        <Button fx:id="examinerRemove" layoutX="741.0" layoutY="349.0" mnemonicParsing="false" onAction="#handleExaminer" prefHeight="30.0" text="Remove" />
+                        <ListView fx:id="examinerList" layoutX="459.0" layoutY="34.0" prefHeight="300.0" prefWidth="450.0" />
+                        <Button fx:id="examinerAddMoreCourse" layoutX="269.0" layoutY="283.0" mnemonicParsing="false" onAction="#handleExaminer" text="Add more course" />
                      </children>
                   </AnchorPane>
                </content>
@@ -281,7 +276,7 @@
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <HBox layoutX="26.0" layoutY="35.0" prefHeight="100.0" prefWidth="200.0">
+                        <HBox layoutX="26.0" layoutY="35.0" prefHeight="40.0" prefWidth="200.0">
                            <children>
                               <Label layoutX="28.0" layoutY="34.0" text="Select day:">
                                  <padding>
@@ -295,39 +290,42 @@
                               </ComboBox>
                            </children>
                         </HBox>
-                        <VBox layoutX="29.0" layoutY="96.0" prefHeight="200.0" prefWidth="194.0">
+                        <VBox layoutX="28.0" layoutY="84.0" prefHeight="58.0" prefWidth="194.0">
                            <children>
                               <RadioButton fx:id="roomAllRooms" mnemonicParsing="false" onAction="#handleRoom" text="All rooms">
                                  <toggleGroup>
                                     <ToggleGroup fx:id="as" />
                                  </toggleGroup>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" />
+                                 </VBox.margin>
                               </RadioButton>
-                              <RadioButton fx:id="roomAvailableRooms" mnemonicParsing="false" onAction="#handleRoom" text="Available rooms" toggleGroup="$as" />
+                              <RadioButton fx:id="roomAvailableRooms" mnemonicParsing="false" onAction="#handleRoom" text="Available rooms" toggleGroup="$as">
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" />
+                                 </VBox.margin>
+                              </RadioButton>
                               <RadioButton fx:id="roomUnavailableRooms" mnemonicParsing="false" onAction="#handleRoom" text="Unavailable rooms" toggleGroup="$as" />
-                              <RadioButton fx:id="roomOralRooms" mnemonicParsing="false" onAction="#handleRoom" text="Rooms for oral exams" toggleGroup="$as" />
                            </children>
                         </VBox>
-                        <GridPane layoutX="26.0" layoutY="275.0">
+                        <GridPane layoutX="26.0" layoutY="208.0" prefHeight="66.0" prefWidth="240.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.20001220703125" minWidth="10.0" prefWidth="91.20001220703125" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="108.79998779296875" minWidth="10.0" prefWidth="108.79998779296875" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="170.0" minWidth="10.0" prefWidth="170.0" />
                           </columnConstraints>
                           <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
                               <Label text="Room size:" />
                               <Label text="Room number:" GridPane.rowIndex="1" />
-                              <Label text="Availability:" GridPane.rowIndex="2" />
-                              <TextField fx:id="roomRoomSize" GridPane.columnIndex="1" />
+                              <TextField fx:id="roomRoomSize" prefHeight="26.0" prefWidth="130.0" GridPane.columnIndex="1" />
                               <TextField fx:id="roomRoomNumber" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <ComboBox fx:id="roomAvailability" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <Button fx:id="roomUpdate" layoutX="96.0" layoutY="432.0" mnemonicParsing="false" onAction="#handleRoom" text="Update" />
-                        <HBox layoutX="18.0" layoutY="380.0" prefHeight="34.0" prefWidth="214.0">
+                        <Button fx:id="roomUpdate" layoutX="98.0" layoutY="330.0" mnemonicParsing="false" onAction="#handleRoom" prefHeight="30.0" prefWidth="60.0" text="Update" />
+                        <HBox layoutX="46.0" layoutY="285.0" prefHeight="27.0" prefWidth="214.0">
                            <children>
                               <CheckBox fx:id="roomProjector" mnemonicParsing="false" text="Projector">
                                  <HBox.margin>
@@ -342,9 +340,9 @@
                               <CheckBox fx:id="roomVGA" mnemonicParsing="false" text="VGA" />
                            </children>
                         </HBox>
-                        <Button fx:id="roomAdd" layoutX="559.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleRoom" text="Add" />
-                        <Button fx:id="roomRemove" layoutX="721.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleRoom" text="Remove" />
-                        <ListView fx:id="roomList" layoutX="472.0" layoutY="37.0" prefHeight="286.0" prefWidth="418.0" />
+                        <Button fx:id="roomAdd" layoutX="570.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleRoom" prefHeight="30.0" prefWidth="50.0" text="Add" />
+                        <Button fx:id="roomRemove" layoutX="731.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleRoom" prefHeight="30.0" text="Remove" />
+                        <ListView fx:id="roomList" layoutX="457.0" layoutY="35.0" prefHeight="300.0" prefWidth="450.0" />
                      </children></AnchorPane>
                </content>
             </Tab>
