--- a/SEP1/src/ks.fxml
+++ b/SEP1/src/ks.fxml
@@ -31,8 +31,8 @@
                         <GridPane layoutX="19.0" layoutY="52.0" prefWidth="950.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="140.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="180.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="160.0" />
@@ -44,12 +44,12 @@
                            <children>
                               <Label text="Duration" GridPane.columnIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="45.0" />
+                                    <Insets left="40.0" />
                                  </GridPane.margin>
                               </Label>
                               <Label text="Course" GridPane.columnIndex="2">
                                  <GridPane.margin>
-                                    <Insets left="70.0" />
+                                    <Insets left="80.0" />
                                  </GridPane.margin>
                               </Label>
                               <Label text="Room" GridPane.columnIndex="3">
@@ -57,9 +57,9 @@
                                     <Insets left="60.0" />
                                  </GridPane.margin>
                               </Label>
-                              <ComboBox fx:id="examCourse" prefWidth="160.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                              <ComboBox fx:id="examCourse" prefWidth="190.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="10.0" />
+                                    <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </ComboBox>
                               <ComboBox fx:id="examRoom" prefWidth="140.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
@@ -86,7 +86,10 @@
                                     <Insets left="5.0" />
                                  </GridPane.margin>
                               </TextField>
-                              <TextField fx:id="examDuration" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="examDuration" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="5.0" />
+                                 </GridPane.margin></TextField>
                               <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                                  <children>
                                     <ComboBox fx:id="examDate" prefWidth="80.0">
